updated french team bios, updated images

--- a/_data/team/en.yml
+++ b/_data/team/en.yml
@@ -54,7 +54,7 @@ alumni:
   members:
     - name: "Ulysse Lefeuvre"
       role: "Soundscape Researcher"
-      image: "/assets/images/team/1.png"
+      image: "/assets/images/team/1.webp"
       info: "Ulysse Lefeuvre is a student at Sorbonne University in Paris and at IRCAM. He is doing an internship at McGill University with Professor Catherine Guastavino on auditory motion perception."
 collaborators:
   title: "COLLABORATORS"
