--- a/_data/team/fr.yml
+++ b/_data/team/fr.yml
@@ -1,63 +1,63 @@
 staff:
-  title: "MEET OUR TEAM"
+  title: "RENCONTREZ NOTRE ÉQUIPE"
   members:
     - name: "Catherine Guastavino"
-      role: "Principal Investigator"
+      role: "Chercheuse principale"
       image: "/assets/images/team/Catherine_Guastavino-RC3_Square.jpg"
-      info: "Catherine Guastavino is a Professor at McGill University and a member of the Centre for Interdisciplinary Research in Music Media and Technology (CIRMMT). She happily leads the Sounds in the City partnership and enjoys working with diverse academics, professionals, artists, and citizens to rethink the role of sound in cities. She also co-direct the thematic network AIRS (Air, Intersectiorialité, recherche Respiratoire et Sonore). She has published extensively on urban soundscapes, sensory experience, auditory perception, and music psychology. She also has extensive experience collaborating with industry partners, cultural institutions, as well as with municipal and provincial governments. "
+      info: "Catherine Guastavino est professeure à l'Université McGill et membre du Centre de recherche interdisciplinaire en musique, médias et technologie (CIRMMT). Elle dirige avec enthousiasme le partenariat Sounds in the City et apprécie de travailler avec des universitaires, des professionnels, des artistes et des citoyens divers pour repenser le rôle du son dans les villes. Elle co-dirige également le réseau thématique AIRS (Air, Intersectorialité, recherche Respiratoire et Sonore). Elle a publié abondamment sur les paysages sonores urbains, l'expérience sensorielle, la perception auditive et la psychologie de la musique. Elle a également une vaste expérience de collaboration avec des partenaires industriels, des institutions culturelles ainsi qu'avec des gouvernements municipaux et provinciaux."
     - name: "Josée Laplace"
-      role: "Researcher"
+      role: "Chercheuse"
       image: "/assets/images/team/Joseepic2.jpg"
-      info: "Josée Laplace is a researcher trained in urban planning (PhD in Urban Studies), concerned in bettering the experience of the built environment. Her work lies in particular at the intersection of soundscapes and urban heritage. She has developed methods to characterize places ambiances through sensory experience, with the aim of informing projects or programs of urban revalorization. "
+      info: "Josée Laplace est chercheuse formée en urbanisme (doctorat en études urbaines), préoccupée par l'amélioration de l'expérience de l'environnement bâti. Son travail se situe en particulier à l'intersection des paysages sonores et du patrimoine urbain. Elle a développé des méthodes pour caractériser les ambiances des lieux à travers l'expérience sensorielle, dans le but d'informer des projets ou des programmes de revalorisation urbaine."
     - name: "Nicola Di Croce"
-      role: "Researcher"
+      role: "Chercheur"
       image: "/assets/images/team/Nicola.jpg"
-      info: "Nicola Di Croce is a researcher and sound artist. He holds a PhD in Regional Planning and Public Policies from Università Iuav di Venezia and was a Marie Sklodowska-Curie Fellow at Iuav and McGill University. His research deals with the relationship between Urban Studies and Sound Studies; he is interested in collaborative and participatory approaches to urban policy analysis and design. He considers relational sound art practice and sound-oriented methodologies as meaningful tools to support the investigation of urban and cultural transformations, as well as to improve the livability and inclusiveness of public space and promote social change."
+      info: "Nicola Di Croce est chercheur et artiste sonore. Il est titulaire d'un doctorat en Aménagement du territoire et politiques publiques de l'Université Iuav de Venise et a été boursier Marie Sklodowska-Curie à l'Iuav et à l'Université McGill. Sa recherche porte sur la relation entre les études urbaines et les études sonores; il s'intéresse aux approches collaboratives et participatives de l'analyse et de la conception des politiques urbaines. Il considère la pratique artistique sonore relationnelle et les méthodologies axées sur le son comme des outils significatifs pour soutenir l'investigation des transformations urbaines et culturelles, ainsi que pour améliorer la convivialité et l'inclusivité de l'espace public et promouvoir le changement social."
     - name: "Cynthia Tarlao"
-      role: "Researcher"
+      role: "Chercheuse"
       image: "/assets/images/team/Cynthia_Tarlao-RC3red-square.jpg"
-      info: "Cynthia Tarlao is a researcher working on the integration of sound in urban planning practice. Her work focuses on assessing how professionals of the urban environment take sound into consideration in planning and designing the city, and on developing tools to help them do this beyond regulatory requirements. Currently, she is working on topics of public policy and urban densification around the question of noise and sound with the goal of bringing together a breadth of perspectives towards equity and sustainability in city planning. She is also the main English/French translator for Sounds in the City."
+      info: "Cynthia Tarlao est chercheuse travaillant sur l'intégration du son dans la pratique de l'urbanisme. Ses travaux portent sur l'évaluation de la manière dont les professionnels de l'environnement urbain prennent en compte le son dans la planification et la conception de la ville, et sur le développement d'outils pour les aider à aller au-delà des exigences réglementaires. Actuellement, elle travaille sur des sujets de politique publique et de densification urbaine autour de la question du bruit et du son, avec pour objectif de rassembler une multitude de perspectives en faveur de l'équité et de la durabilité dans la planification urbaine. Elle est également la principale traductrice anglais/français pour Sounds in the City."
     - name: "Edda Bild"
-      role: "Researcher"
+      role: "Chercheuse"
       image: "/assets/images/team/Edda-Bild.jpg"
-      info: "Edda Bild is a soundscape researcher and educator with over 10 years of experience in working on urban soundscapes and their relationship to public and private space use, in various European and North American contexts. She has developed and tested ways of documenting the urban auditory experience and of improving it in practice through intentional urban design and planning, with a strong focus on participatory approaches. Her interest lies in knowledge mobilization and communication, by educating urban stakeholders and the larger public on soundscape and promoting the idea of sound awareness as a resource."
+      info: "Edda Bild est chercheuse en paysages sonores et éducatrice avec plus de 10 ans d'expérience dans le domaine des paysages sonores urbains et de leur relation à l'utilisation de l'espace public et privé, dans divers contextes européens et nord-américains. Elle a développé et testé des moyens de documenter l'expérience auditive urbaine et de l'améliorer en pratique grâce à une conception et une planification urbaines intentionnelles, avec un fort accent sur les approches participatives. Son intérêt porte sur la mobilisation et la communication des connaissances, en éduquant les acteurs urbains et le grand public sur le paysage sonore et en promouvant l'idée de la sensibilisation au son comme ressource."
     - name: "Christopher Trudeau"
-      role: "Researcher"
+      role: "Chercheur"
       image: "/assets/images/team/Chris_Trudeau.jpg"
-      info: "Christopher Trudeau is a sound and noise researcher with an interest in the social inequalities in long-term sonic environments, as well as popular attitudes toward urban noise. He’s been with the Sounds in the City team since 2017 working on projects that deal with sound-related issues in urban design (Fleurs de Macadam; Plateau-Mont-Royal) and the cohabitation between activities (ÉcoutezMTL; Downtown Montreal)."
+      info: "Christopher Trudeau est chercheur sur le son et le bruit, avec un intérêt pour les inégalités sociales dans les environnements sonores à long terme, ainsi que pour les attitudes populaires à l'égard du bruit urbain. Il fait partie de l'équipe de Sounds in the City depuis 2017 et travaille sur des projets traitant des problèmes liés au son dans la conception urbaine (Fleurs de Macadam; Plateau-Mont-Royal) et de la cohabitation entre les activités (ÉcoutezMTL; centre-ville de Montréal)."
     - name: "Richard Yanaky"
-      role: "Researcher"
+      role: "Chercheur"
       image: "/assets/images/team/richard2_small.jpg"
-      info: "Richard Yanaky is helping professionals by leading the research and development of a new immersive sound planning tool, City Ditty. City Ditty aims to introduce a new generation of professionals to soundscape design by helping raise their sound-awareness, teach them soundscape design principles, and support them in the creation of their own soundscapes in a fully navigable and immersive 3D environment via Virtual Reality or desktop PC. He hopes that through empowering more people through simple-to-use technology, more people will be able to contribute to creating healthier and enjoyable cities. City soundscapes are complex but talking about them needn’t be! This work is supported by Richard’s mixed background in information studies, computer science, psycholinguistics, and many years as a college and university instructor."
+      info: "Richard Yanaky aide les professionnels en dirigeant la recherche et le développement d'un nouvel outil de planification sonore immersif, City Ditty. City Ditty vise à introduire une nouvelle génération de professionnels à la conception de paysages sonores en les aidant à prendre conscience du son, à leur enseigner les principes de conception de paysages sonores, et à les soutenir dans la création de leurs propres paysages sonores dans un environnement 3D entièrement navigable et immersif via la réalité virtuelle ou un PC de bureau. Il espère qu'en permettant à davantage de personnes d'utiliser une technologie simple, davantage de personnes pourront contribuer à la création de villes plus saines et agréables. Les paysages sonores urbains sont complexes, mais en parler ne devrait pas l'être ! Ce travail est soutenu par la formation variée de Richard en études de l'information, informatique, psycholinguistique, et de nombreuses années comme instructeur au collège et à l'université."
     - name: "Ezra J. Teboul"
-      role: "Researcher"
+      role: "Chercheur"
       image: "/assets/images/team/ezra2.png"
-      info: "Ezra J. Teboul is a Sephardic artist and researcher. Their current project is focused on ways in cellists perceive unusual cello performance techniques in the work of Helmut Lachenman, a contemporary composer. Their personal projects focus currently on reverse engineering, the reimplementation of artistic technical systems, and the history of electricity and electronics, especially in the way that engineers and mathematicians participated in the rise of mass manufacturing and the commodity form. For the past decade, they were an ethnographer of DIY electronic music instruments and artistic communities."
+      info: "Ezra J. Teboul est un artiste et chercheur séfarade. Leur projet actuel se concentre sur la manière dont les violoncellistes perçoivent des techniques de performance inhabituelles pour violoncelle dans l'œuvre de Helmut Lachenman, un compositeur contemporain. Leurs projets personnels se concentrent actuellement sur l'ingénierie inverse, la réimplémentation de systèmes techniques artistiques, et l'histoire de l'électricité et de l'électronique, notamment dans la manière dont les ingénieurs et les mathématiciens ont participé à l'essor de la fabrication de masse et de la forme de marchandise. Au cours de la dernière décennie, ils ont été ethnographes d'instruments de musique électroniques DIY et de communautés artistiques."
     - name: "Daniel Steele"
-      role: "Researcher"
+      role: "Chercheur"
       image: "/assets/images/team/DanSteele.jpg"
-      info: "Daniel Steele is a founding member of Sounds in the City and an urban experience researcher. With well over 10 years of experience, he found his way into this research by way of his work on hearing aids. He is concerned with how people live, work, and play in cities and, equally importantly, how insights from this research can be used in urban planning and decision making about the public realm. He currently works for the City of Boston as a Principal Research Advisor at the Planning Advisory Council."
+      info: "Daniel Steele est un membre fondateur de Sounds in the City et un chercheur en expérience urbaine. Avec plus de 10 ans d'expérience, il s'est dirigé vers cette recherche grâce à son travail sur les appareils auditifs. Il s'intéresse à la manière dont les gens vivent, travaillent et se divertissent dans les villes et, tout aussi important, à la manière dont les perspectives issues de cette recherche peuvent être utilisées dans la planification urbaine et la prise de décision concernant l'espace public. Il travaille actuellement pour la ville de Boston en tant que conseiller principal en recherche au Planning Advisory Council."
     - name: "Valérian Fraisse"
-      role: "Researcher"
+      role: "Chercheur"
       image: "/assets/images/team/Valerian-Fraisse.jpg"
-      info: "Valérian Fraisse is a soundscape researcher working at the intersection of art and science. He collaborates with sound artists both in Paris and Montréal to study the impact of sound installations in urban public spaces. He is currently working on a methodology to help sound artists in their composition process. The methodology includes acoustic measurements, laboratory and in situ soundscape evaluations to assist creation based on space users’ feedback. As part of this work, he developed a soundscape simulation tool that allows for the evaluation of sound installation prototypes prior to their deployment on site."
+      info: "Valérian Fraisse est un chercheur en paysages sonores travaillant à l'intersection de l'art et de la science. Il collabore avec des artistes sonores à Paris et à Montréal pour étudier l'impact des installations sonores dans les espaces publics urbains. Il travaille actuellement sur une méthodologie visant à aider les artistes sonores dans leur processus de composition. La méthodologie comprend des mesures acoustiques, des évaluations de paysages sonores en laboratoire et in situ pour aider à la création basée sur les retours des utilisateurs de l'espace. Dans le cadre de ce travail, il a développé un outil de simulation de paysages sonores permettant d'évaluer les prototypes d'installations sonores avant leur déploiement sur site."
     - name: "Chang Miao"
-      role: "Researcher"
+      role: "Chercheuse"
       image: "/assets/images/team/Chang.png"
-      info: "Chang Miao is a soundscape researcher focused on human perception and behavior within urban public spaces. Her research investigates the effect of music performances on the quality of urban public space experiences, incorporating perspectives of urban public space design. The innovative use of the \"City Ditty\" soundscape simulator in her methodology enables precise analysis of the auditory influences on public life, highlighting the impact of sound design in urban planning and architecture."
+      info: "Chang Miao est chercheuse en paysages sonores, axée sur la perception humaine et le comportement dans les espaces publics urbains. Ses recherches examinent l'effet des performances musicales sur la qualité des expériences dans les espaces publics urbains, en incorporant des perspectives de conception des espaces publics urbains. L'utilisation innovante du simulateur de paysages sonores « City Ditty » dans sa méthodologie permet une analyse précise des influences auditives sur la vie publique, mettant en lumière l'impact de la conception sonore dans la planification et l'architecture urbaines."
     - name: "Negar Imani"
-      role: "Researcher"
+      role: "Chercheuse"
       image: "/assets/images/team/Negar.jpg"
-      info: "Negar Imani has a background in Urban Planning and Design. In her PhD, she works at the intersection of Urban Soundscapes, Participatory GIS, and Walkable Access to Urban Green Spaces. She aims to study walkable access to local green spaces and its impact on residents’ everyday soundscapes. During her Masters, she worked on the effect of sounds in promoting the Sense of Place in an Urban Green Space. She has also had experience in urban planning and design projects on different levels, from neighbourhood to city scale."
+      info: "Negar Imani a une formation en urbanisme et en conception urbaine. Dans son doctorat, elle travaille à l'intersection des paysages sonores urbains, des SIG participatifs et de l'accès piétonnier aux espaces verts urbains. Elle vise à étudier l'accès piétonnier aux espaces verts locaux et son impact sur les paysages sonores quotidiens des résidents. Pendant sa maîtrise, elle a travaillé sur l'effet des sons dans la promotion du sentiment de lieu dans un espace vert urbain. Elle a également de l'expérience dans des projets de planification et de conception urbaines à différents niveaux, de l'échelle de quartier à l'échelle de la ville."
 alumni:
-  title: "ALUMNI"
+  title: "ANCIENS MEMBRES"
   members:
     - name: "Ulysse Lefeuvre"
-      role: "Soundscape Researcher"
-      image: "/assets/images/team/1.png"
-      info: "Ulysse Lefeuvre is a student at Sorbonne University in Paris and at IRCAM. He is doing an internship at McGill University with Professor Catherine Guastavino on auditory motion perception."
+      role: "Chercheur en paysages sonores"
+      image: "/assets/images/team/1.webp"
+      info: "Ulysse Lefeuvre est étudiant à l'Université Sorbonne à Paris et à l'IRCAM. Il effectue un stage à l'Université McGill avec la professeure Catherine Guastavino sur la perception du mouvement auditif."
 collaborators:
-  title: "COLLABORATORS"
+  title: "COLLABORATEURS"
   members:
     - name: "Simone D’Ambrosio"
       image: ""
@@ -92,14 +92,12 @@ collaborators:
 
     - name: "Soft dB"
 
-    - name: "ÉTS, Montréal, Québec, Canada Professor"
+    - name: "ÉTS, Montréal, Québec, Canada Professeur"
 
-    - name: "Erasmus University College, Belgium."
+    - name: "Université Erasmus College, Belgique."
 
-    - name: "Full Professor, Department of Information Technology, Ghent University, Belgium."
+    - name: "Professeur titulaire, Département de technologie de l'information, Université de Gand, Belgique."
 
-    - name: "Noise Abatement Society, United Kingdom"
+    - name: "Noise Abatement Society, Royaume-Uni"
 
-    - name: "ARPAT, Italy"
-
-
+    - name: "ARPAT, Italie"
