updated embed links on french media page

--- a/_data/media/fr.yml
+++ b/_data/media/fr.yml
@@ -1,11 +1,11 @@
 video:
   title: "VIDÉOS"
   data:
-    - url: "https://www.youtube.com/embed/xMVwfa107xQ"
+    - url: "https://www.youtube.com/embed/VXRy_wlOSIA?si=IMb2qn_z_FhARYaq"
       title: "Presentation of the Sounds in the City research partnership"
       description: "Video interview with C. Guastavino at the 7e édition of SÉRI « Synergie Émergente Recherche Industrie »"
       date: "2019, May 14"
-    - url: "https://www.youtube.com/embed/xMVwfa107xQ"
+    - url: "https://www.youtube.com/embed/95wbxxvGxJk?si=h_9Gimrz04DNEyMX"
       title: "Schalk, M. – Musikiosk: des enceintes en libre-service"
       description: "À titre d’information"
       date: "2015, August 14"
