Update Links project1

--- a/_data/projects/en.yml
+++ b/_data/projects/en.yml
@@ -29,11 +29,11 @@
   participation: "We participated in public consultations and conducted acoustic measurements and audio recordings before and after the pedestrianization. We also administered questionnaires to passers-by to evaluate their experience in the new pedestrian walkway, with an emphasis on soundscape and sonic expectations. We then provided recommendations to the borough on how to reinforce the purpose of this new space through sound. "
   contact_info: "For details, please contact: Daniel Steele, Catherine Guastavino"
   links:
-    - url: ''
+    - url: 'electronslibres.telequebec.tv/episodes/35418'
       name: 'electronslibres.telequebec.tv/episodes/35418'
-    - url: ''
+    - url: 'montreal.ca/en/places/terrasses-roy'
       name: 'montreal.ca/en/places/terrasses-roy'
-    - url: ''
+    - url: 'montreal.ca/en/places/terrasses-roy-6507'
       name: 'montreal.ca/en/places/terrasses-roy-6507'
   publications:
     - url: ''
