Update links to open in new page

--- a/_data/projects/fr.yml
+++ b/_data/projects/fr.yml
@@ -169,11 +169,11 @@
   participation: "Nous avons intégré les résultats de ces activités dans la conception d'un prototype d'outil de réalité virtuelle. Le développement est en cours et des essais sont prévus dans les mois à venir."
   contact_info: "Pour plus de détails, veuillez contacter : Daniel Steele, Catherine Guastavino"
   links:
-    - url: ''
+    - url: 'electronslibres.telequebec.tv/episodes/35418'
       name: 'electronslibres.telequebec.tv/episodes/35418'
-    - url: ''
+    - url: 'montreal.ca/en/places/terrasses-roy'
       name: 'montreal.ca/en/places/terrasses-roy'
-    - url: ''
+    - url: 'montreal.ca/en/places/terrasses-roy-6507'
       name: 'montreal.ca/en/places/terrasses-roy-6507'
   publications:
     - url: ''
