force break for about us fr nav item

--- a/_data/navigation_fr.yml
+++ b/_data/navigation_fr.yml
@@ -20,6 +20,7 @@
       url: "/events/"
 
 - title: À PROPOS DE NOUS
+  display-class: "menu-item-long"
   url: "/about"
   submenu:
     - title: Partenaires & Financements
